Replaced some deprecated constructors.